/**
* @version $Id$
* @package FrontAccounting
* @copyright (C) 2005 - 2011 FrontAccounting, LLC
* @license http://www.gnu.org/copyleft/gpl-3.0.html GNU/GPL
* FrontAccounting is Free Software
*/

1. Changelog
------------
This is a changelog for FrontAccounting All releases.

2014-09-29 16:04 +0200 Joe
(3421) Changelog change
 CHANGELOG.txt

2014-09-29 15:57 +0200 Joe
(3420) Release 2.3.22
 update.html
 version.php

2014-09-29 15:35 +0200 Janusz Dobrowolski
(3419) Updated gettext template.
 lang/new_language_template/LC_MESSAGES/empty.po

2014-09-26 15:34 +0200 Joe
(3418) Updated en_US-demo.sql and en_US-new.sql COAs
 sql/en_US-demo.sql
 sql/en_US-new.sql

2014-09-24 23:42 +0200 Joe
(3417) Global option for printing item images on sales quotations.
 config.default.php
 reporting/rep111.php

2014-09-24 07:51 +0200 Joe
(3416) Improved Tax Report. Bank Payments/Deposits show 'order to/name' info in name column.
 reporting/rep709.php

2014-09-22 23:20 +0200 Janusz Dobrowolski
(3415) Small cleanups.
 inventory/transfers.php
 sales/includes/ui/sales_order_ui.inc

2014-09-21 00:09 +0200 Janusz Dobrowolski
(3414) Fixed stock quantity checks to block transactions which would result in negative inventory status (if not allowed).
 gl/includes/db/gl_db_bank_trans.inc
 includes/db/inventory_db.inc
 includes/db/manufacturing_db.inc
 includes/db/sql_functions.inc
 includes/ui/items_cart.inc
 inventory/adjustments.php
 inventory/includes/item_adjustments_ui.inc
 inventory/includes/stock_transfers_ui.inc
 inventory/transfers.php
 manufacturing/includes/work_order_issue_ui.inc
 manufacturing/work_order_add_finished.php
 manufacturing/work_order_entry.php
 manufacturing/work_order_issue.php
 purchasing/supplier_credit.php
 sales/customer_delivery.php
 sales/includes/cart_class.inc
 sales/includes/ui/sales_order_ui.inc
 sales/sales_order_entry.php

2014-09-19 09:06 +0200 Joe
(3413) Set default Show Also Allocated to Yes in aged reports, just like on screen transactions.